--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -3,19 +3,148 @@
 {% block title %}Hello AccueilController!{% endblock %}
 
 {% block body %}
-<header>
+   <header>
 <nav>
-   <a href="accueil">Accueil</a> ,
-        <a href="salle">Lieux</a> ,
-        <a href="manif">Manifestations</a> ,
-        <a href="panier">Panier:<span id='panier'>0</span></a> ,
-        <a href="login">Connexion</a> ,
-        <a href="admin">Administration</a> , 
+<ul class="menu">
+        <li><a href="accueil">ACCUEIL</a></li> 
+        <li><a href="salle">SALLES</a></li> 
+        <li><a href="manif">MANIFESTATIONS</a></li> 
+        <li><a href="panier">PANIER:<span id='panier'>0</span></a></li> 
+        <li><a href="login">CONNEXION</a></li> 
+        <li><a href="admin">ADMIN</a></li> 
+        </ul>
         </nav>
         </header>
+       
+       <div id="back_accueil">
+<div class="presentation">
+<h1 class="laylow">Népal - Concert</h1>
+<h1 class="trinity">Cheddar</h1>
+<h1 class="mardi">MARDI 20 DECEMBRE 2022</h1>
+<h1 class="bayonne">A BAYONNE</h1>
+</div>
 
+<form action="reponse_recherche.php" method="GET" data-parsley-validate class="nav_form">
+    <input type="search" id="real" placeholder="Recherche" list="manifestation" name="recherche_manifs" autocomplete="off" />
+    <input type="submit" id="bouton_recherche" value="Envoyer"> 
+</form>
+
+<section class="theatre">
+<h1 class="titre_theatre">THEATRES</h1>
 <hr>
-bienvenue sur mon site
+<div class="titanic_flex">
+<div class="titanic1">
+<img src="{{ asset('img/titanic.png') }}" class="titanic_img">
+<a href="manifestation">
+<input type="submit" value="RESERVER" class="bouton_titanic">
+</a>
+</div>
+<p class="text_theatre">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra posuere elit at ullamcorper. Aenean sit amet neque et urna finibus facilisis eget at velit. Curabitur imperdiet risus ullamcorper odio luctus, condimentum mattis tortor iaculis. Donec felis lectus, rutrum id eros eu, eleifend dignissim elit. Integer pellentesque eget orci a egestas. In placerat malesuada tempus. Etiam porttitor metus a arcu rhoncus, vitae imperdiet justo egestas.
+Donec porttitor mi at iaculis dictum.
+
+Nam lectus dolor, malesuada et rhoncus et, aliquam id erat. In hac habitasse platea dictumst. Ut dapibus fringilla vestibulum. Praesent euismod pharetra arcu sit amet fringilla. Sed lobortis commodo dapibus. Ut porttitor a tellus eu lacinia. Proin ut semper tortor. Cras ultricies hendrerit velit, id interdum nisi porttitor non. Ut augue turpis, vehicula et euismod in, euismod sit amet dolor.
+</p>
+</div>
+<a href="manif" class="theatre_lien">Voir les autres pièces</a>
+</section>
+<section class="concert">
+<h1 class="titre_concert">Concerts</h1>
+<hr>
+<div class="concert_flex">
+<p class="text_concert">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra posuere elit at ullamcorper. Aenean sit amet neque et urna finibus facilisis eget at velit. Curabitur imperdiet risus ullamcorper odio luctus, condimentum mattis tortor iaculis. Donec felis lectus, rutrum id eros eu, eleifend dignissim elit. Integer pellentesque eget orci a egestas. In placerat malesuada tempus. Etiam porttitor metus a arcu rhoncus, vitae imperdiet justo egestas.
+Donec porttitor mi at iaculis dictum.
+
+Nam lectus dolor, malesuada et rhoncus et, aliquam id erat. In hac habitasse platea dictumst. Ut dapibus fringilla vestibulum. Praesent euismod pharetra arcu sit amet fringilla. Sed lobortis commodo dapibus. Ut porttitor a tellus eu lacinia. Proin ut semper tortor. Cras ultricies hendrerit velit, id interdum nisi porttitor non. Ut augue turpis, vehicula et euismod in, euismod sit amet dolor.
+</p>
+
+<div class="concert_img">
+<img src="{{ asset('img/titanic.png') }}" class="titanic_img">
+<a href="manifestation">
+<input type="submit" value="RESERVER" class="bouton_titanic">
+</a>
+</div>
+</div>
+<a href="manif" class="concert_lien">Voir les autres pièces</a>
+</section>
+<section class="Cinema">
+<h1 class="titre_theatre">CINEMA</h1>
+<hr>
+<div class="titanic_flex">
+<div class="titanic1">
+<img src="{{ asset('img/titanic.png') }}" class="titanic_img">
+<a href="manifestation">
+<input type="submit" value="RESERVER" class="bouton_titanic">
+</a>
+</div>
+<p class="text_theatre">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra posuere elit at ullamcorper. Aenean sit amet neque et urna finibus facilisis eget at velit. Curabitur imperdiet risus ullamcorper odio luctus, condimentum mattis tortor iaculis. Donec felis lectus, rutrum id eros eu, eleifend dignissim elit. Integer pellentesque eget orci a egestas. In placerat malesuada tempus. Etiam porttitor metus a arcu rhoncus, vitae imperdiet justo egestas.
+Donec porttitor mi at iaculis dictum.
+
+Nam lectus dolor, malesuada et rhoncus et, aliquam id erat. In hac habitasse platea dictumst. Ut dapibus fringilla vestibulum. Praesent euismod pharetra arcu sit amet fringilla. Sed lobortis commodo dapibus. Ut porttitor a tellus eu lacinia. Proin ut semper tortor. Cras ultricies hendrerit velit, id interdum nisi porttitor non. Ut augue turpis, vehicula et euismod in, euismod sit amet dolor.
+</p>
+</div>
+<a href="manif" class="theatre_lien">Voir les autres pièces</a>
+<section class="spectacle">
+<h1 class="titre_spectacle">Spectacle</h1>
+<hr>
+<div class="concert_flex">
+<p class="text_concert">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra posuere elit at ullamcorper. Aenean sit amet neque et urna finibus facilisis eget at velit. Curabitur imperdiet risus ullamcorper odio luctus, condimentum mattis tortor iaculis. Donec felis lectus, rutrum id eros eu, eleifend dignissim elit. Integer pellentesque eget orci a egestas. In placerat malesuada tempus. Etiam porttitor metus a arcu rhoncus, vitae imperdiet justo egestas.
+Donec porttitor mi at iaculis dictum.
+
+Nam lectus dolor, malesuada et rhoncus et, aliquam id erat. In hac habitasse platea dictumst. Ut dapibus fringilla vestibulum. Praesent euismod pharetra arcu sit amet fringilla. Sed lobortis commodo dapibus. Ut porttitor a tellus eu lacinia. Proin ut semper tortor. Cras ultricies hendrerit velit, id interdum nisi porttitor non. Ut augue turpis, vehicula et euismod in, euismod sit amet dolor.
+</p>
+
+<div class="concert_img">
+<img src="{{ asset('img/titanic.png') }}" class="titanic_img">
+<a href="manifestation"
+<input type="submit" value="RESERVER" class="bouton_titanic">
+</a>
+</div>
+</div>
+<a href="manif" class="concert_lien">Voir les autres pièces</a>
+</section>
+<footer class="footer">
+  <div class="footer__addr">
+    <h1 class="footer__logo">Le Pestacle</h1>
+    <h2>Contact</h2>
+    <address>
+      9 Rue Quebec, 10430 Rosières-prés-Troyes<br>  
+      <a class="footer__btn" href="mailto:juleshemon63@gmail.com">Notre Mail</a>
+    </address>
+  </div>
+  <ul class="footer__nav">
+    <li class="nav__item">
+      <h2 class="nav__title">Genre</h2>
+      <ul class="nav__ul">
+        <li><a href="#">Théâtre</a></li>
+        <li><a href="#">Concert</a></li>     
+        <li><a href="#">Cinéma</a></li>
+        <li><a href="#">Spectacle</a></li>
+      </ul>
+    </li>
+    <li class="nav__item nav__item--extra">
+      <h2 class="nav__title">Compte</h2>
+      <ul class="nav__ul">
+        <li><a href="#">Mot de passe oublié ?</a></li>
+        <li><a href="#">Connexion</a></li>
+      </ul>
+    </li>
+    <li class="nav__item">
+      <h2 class="nav__title">Aide</h2>
+      <ul class="nav__ul">
+        <li><a href="#">Comment réserver ?</a></li>
+        <li><a href="#">Comment se créer un compte ?</a></li>
+        <li><a href="#">FAQ</a></li>
+      </ul>
+    </li>
+     <li class="nav__item">
+      <h2 class="nav__title">Le Pestacle</h2>
+      <ul class="nav__ul">
+        <li><a href="#">A propos</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </li>
+  </ul>
+</footer>
 
 
 
