--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,9 +9,38 @@
      
     </head>
     <body>
+       <header>
+<nav>
+<ul class="menu">
+        <li><a href="{{ path('app_accueil') }}">ACCUEIL</a></li> 
+        <li><a href="{{ path('app_salle_index') }}">SALLES</a></li> 
+        <li><a href="{{ path('app_manif_index') }}">MANIFESTATIONS</a></li> 
+        <li><a href="{{ path('app_panier') }}">PANIER:<span id='panier'>0</span></a></li> 
+        {% if app.user %}
+        <li><a href="#">MON COMPTE</a></li>
+        <li><a href="{{ path('app_logout') }}">DECONNEXION</a></li>
+        {% else %}
+        <li><a href="{{ path('app_login') }}">CONNEXION</a></li> 
+        <li><a href="{{ path('app_register') }}">INSCRIPTION</a></li> 
 
+             {% endif %}        
+        <li><a href="admin">ADMIN</a></li> 
+        </ul>
+        </nav>
+        </header>
+      <div id="back_accueil">
+<div class="presentation">
+<h1 class="laylow">Népal - Concert</h1>
+<h1 class="trinity">Cheddar</h1>
+<h1 class="mardi">MARDI 20 DECEMBRE 2022</h1>
+<h1 class="bayonne">A BAYONNE</h1>
+</div>
+
+<form action="reponse_recherche.php" method="GET" data-parsley-validate class="nav_form">
+    <input type="search" id="real" placeholder="Recherche" list="manifestation" name="recherche_manifs" autocomplete="off" />
+    <input type="submit" id="bouton_recherche" value="Envoyer"> 
+</form>
         {% block body %}{% endblock %}
     </body>
-    <script type="text/javascript" src="{{ asset('js/scriptgeneral.js') }}"></script>
 
 </html>
