--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,6 +3,8 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
+
+<section class="container_panier">
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
@@ -12,6 +14,8 @@
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn">M'inscrire</button>
+        <a href="{{ path('app_login') }}" class="btn btn-secondary">Me connecter</a>
     {{ form_end(registrationForm) }}
+    </section>
 {% endblock %}
