--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,16 +3,10 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<header>
-<nav>
-   <a href="accueil">Accueil</a> ,
-        <a href="salle">Lieux</a> ,
-        <a href="manif">Manifestations</a> ,
-        <a href="panier">Panier:<span id='panier'>0</span></a> ,
-        <a href="login">Connexion</a> ,
-        <a href="admin">Administration</a> , 
-        </nav>
-        </header>
+
+
+        <section class="login_section">
+<div class=login>
 <form method="post">
     {% if error %}
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -20,14 +14,14 @@
 
     {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
+            Vous êtes connecté(e) comme {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Me déconnecter</a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+    <h1 class="h3 mb-3 font-weight-normal">Me connecter</h1>
     <label for="inputEmail">Email</label>
     <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>
-    <label for="inputPassword">Password</label>
+    <label for="inputPassword">Mot de passe</label>
     <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>
 
     <input type="hidden" name="_csrf_token"
@@ -46,7 +40,10 @@
     #}
 
     <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+        Connexion
     </button>
+    <a href="{{ path('app_register') }}" class="btn btn-secondary">M'inscrire</a>
 </form>
+</div>
+</section>
 {% endblock %}
