--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-
+{% block content %}
 
         <section class="login_section">
 <div class=login>
@@ -46,4 +46,5 @@
 </form>
 </div>
 </section>
+    {% endblock %}
 {% endblock %}
