--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,13 +6,16 @@
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         <link href="{{ asset('css/style.css') }}" rel="stylesheet"/>
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
-     
+
+        {% block javascript %}<script type="text/javascript" src="{{ asset('js/scriptpagearticles.js') }}" defer></script>
+    <script type="text/javascript" src="{{ asset('js/scriptgeneral.js') }}" defer></script>
+    {% endblock %}
     </head>
     <body>
        <header>
 <nav>
 <ul class="menu">
-        <li><a href="{{ path('app_accueil') }}">ACCUEIL</a></li> 
+        <li><a href="{{ path('app_accueil') }}">ACCUEIL</a></li>
         <li><a href="{{ path('app_salle_index') }}">SALLES</a></li> 
         <li><a href="{{ path('app_manif_index') }}">MANIFESTATIONS</a></li> 
         <li><a href="{{ path('app_panier') }}">PANIER:<span id='panier'>0</span></a></li> 
@@ -40,7 +43,10 @@
     <input type="search" id="real" placeholder="Recherche" list="manifestation" name="recherche_manifs" autocomplete="off" />
     <input type="submit" id="bouton_recherche" value="Envoyer"> 
 </form>
-        {% block body %}{% endblock %}
+          {% block content %}
+
+          {% endblock %}
     </body>
+
 
 </html>
