--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -1,8 +1,11 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}Hello PanierController!{% endblock %}
-
+{% block javascript %}
+<script src="{{ asset('js/scriptpanier.js') }}" defer></script>
+{% endblock %}
 {% block body %}
+    {% block content %}
 
 <section class="container_panier">
 <div class="panier">
@@ -21,7 +24,7 @@
           
  
       </tbody>
-      <tfoot><tr><td id="bas" colspan="3"></td><td><span id="total">...</span>€</td></tr></tfoot>
+      <tfoot><tr><td id="bas" colspan="3"></td><td><span id="total">...</span></td></tr></tfoot>
     </table>
     <br>
     <form action="finalisation.php" method="post">
@@ -30,8 +33,6 @@
   </form>
     </div>
     </section>
-    <script src="{{ asset('js/scriptpanier.js') }}"></script>
 
-</body>
-
+{% endblock %}
 {% endblock %}
